2015-08-04  François  <francois@dechelle.net>

	* changed bases default directory; now /var/lib/uhuru/bases/module5_2

2014-09-14  François Déchelle  <francois@dechelle.net>

	* moved to new version; tested

2014-08-28  François Déchelle  <francois@dechelle.net>

	* changed scan function to set module report

2014-08-06  François Déchelle  <francois@dechelle.net>

	* tested ok

	* compiled ok


